manifests/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitops-app-service
spec:
  selector:
    app: gitops-app  # Match the pods with the label 'app: myapp'
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80  # Forward traffic to port 80 on the container
  type: LoadBalancer  # Expose it externally via a LoadBalancer (optional for cloud environments)
