manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitops-app-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: "myapp-service.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gitops-app
                port:
                  number: 80
